Comments added to the JS code

--- a/WK11/test.html
+++ b/WK11/test.html
@@ -8,6 +8,6 @@
         <h1 id="pageheading">
         Page heading
         </h1>
-        <p>Page content</p>
+        <p id="pID">Page content</p>
     </body>
 </html>
